[gd_scene load_steps=78 format=2]

[ext_resource path="res://HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://images/e3drw1.png" type="Texture" id=2]
[ext_resource path="res://images/player.png" type="Texture" id=3]
[ext_resource path="res://images/dragon fight bg.png" type="Texture" id=4]
[ext_resource path="res://BattleStage.gd" type="Script" id=5]
[ext_resource path="res://images/UI black panel.png" type="Texture" id=6]
[ext_resource path="res://fonts/LexendGiga-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://images/pdth1.png" type="Texture" id=8]
[ext_resource path="res://images/pdth2.png" type="Texture" id=9]
[ext_resource path="res://images/pdth3.png" type="Texture" id=10]
[ext_resource path="res://images/phl2.png" type="Texture" id=11]
[ext_resource path="res://images/phl1.png" type="Texture" id=12]
[ext_resource path="res://images/pdmg1.png" type="Texture" id=13]
[ext_resource path="res://images/pdmg2.png" type="Texture" id=14]
[ext_resource path="res://images/pdsc2.png" type="Texture" id=15]
[ext_resource path="res://images/pdsc1.png" type="Texture" id=16]
[ext_resource path="res://images/pdrw1.png" type="Texture" id=17]
[ext_resource path="res://images/pdrw2.png" type="Texture" id=18]
[ext_resource path="res://images/e3hl1.png" type="Texture" id=19]
[ext_resource path="res://images/e3dth3.png" type="Texture" id=20]
[ext_resource path="res://images/e3drw2.png" type="Texture" id=21]
[ext_resource path="res://images/e3dmg2.png" type="Texture" id=22]
[ext_resource path="res://images/e3hl2.png" type="Texture" id=23]
[ext_resource path="res://images/e3dth2.png" type="Texture" id=24]
[ext_resource path="res://images/e3dmg1.png" type="Texture" id=25]
[ext_resource path="res://images/e3dth1.png" type="Texture" id=26]
[ext_resource path="res://images/e3dsc1.png" type="Texture" id=27]
[ext_resource path="res://images/e3dsc2.png" type="Texture" id=28]
[ext_resource path="res://audio/victory bgm.ogg" type="AudioStream" id=30]
[ext_resource path="res://audio/dragon guardian bgm.ogg" type="AudioStream" id=31]
[ext_resource path="res://audio/defeat bgm.ogg" type="AudioStream" id=32]
[ext_resource path="res://images/enemy3.png" type="Texture" id=33]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=7]
size = 64
font_data = ExtResource( 7 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 3 ) ],
"loop": true,
"name": "dmg",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 3 ) ],
"loop": true,
"name": "drw",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 3 ) ],
"loop": true,
"name": "hl",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 3 ) ],
"loop": true,
"name": "dsc",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "basic",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 10 ) ],
"loop": true,
"name": "death",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 25 ), ExtResource( 22 ), ExtResource( 25 ), ExtResource( 22 ) ],
"loop": true,
"name": "dmg",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 21 ), ExtResource( 2 ), ExtResource( 21 ) ],
"loop": true,
"name": "drw",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 23 ), ExtResource( 19 ), ExtResource( 23 ) ],
"loop": true,
"name": "hl",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 28 ) ],
"loop": true,
"name": "dsc",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ) ],
"loop": true,
"name": "basic",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 24 ), ExtResource( 20 ), ExtResource( 24 ), ExtResource( 20 ), ExtResource( 24 ), ExtResource( 20 ), ExtResource( 24 ), ExtResource( 20 ), ExtResource( 20 ) ],
"loop": true,
"name": "death",
"speed": 5.0
} ]

[sub_resource type="Animation" id=8]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("PLayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "basic" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PLayerSprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("PLayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "dmg" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PLayerSprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath("PLayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "drw" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PLayerSprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath("PLayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "dsc" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PLayerSprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=12]
tracks/0/type = "value"
tracks/0/path = NodePath("PLayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "hl" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PLayerSprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "pbasic"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "pdmg"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "pdrw"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "pdsc"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "phl"

[sub_resource type="AnimationNodeStateMachineTransition" id=18]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=19]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=20]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=21]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=22]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=23]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=24]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=26]
states/pbasic/node = SubResource( 13 )
states/pbasic/position = Vector2( 556, 207 )
states/pdmg/node = SubResource( 14 )
states/pdmg/position = Vector2( 239, 207 )
states/pdrw/node = SubResource( 15 )
states/pdrw/position = Vector2( 556, 51 )
states/pdsc/node = SubResource( 16 )
states/pdsc/position = Vector2( 860, 207 )
states/phl/node = SubResource( 17 )
states/phl/position = Vector2( 556, 360 )
transitions = [ "pbasic", "pdrw", SubResource( 18 ), "pdrw", "pbasic", SubResource( 19 ), "pbasic", "pdmg", SubResource( 20 ), "pbasic", "pdsc", SubResource( 21 ), "pbasic", "phl", SubResource( 22 ), "phl", "pbasic", SubResource( 23 ), "pdmg", "pbasic", SubResource( 24 ), "pdsc", "pbasic", SubResource( 25 ) ]
start_node = "pbasic"
graph_offset = Vector2( 0, 76.188 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=27]

[sub_resource type="Animation" id=28]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("EnemySprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "basic" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemySprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=29]
tracks/0/type = "value"
tracks/0/path = NodePath("EnemySprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "dmg" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemySprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=30]
tracks/0/type = "value"
tracks/0/path = NodePath("EnemySprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "drw" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemySprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=31]
tracks/0/type = "value"
tracks/0/path = NodePath("EnemySprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "dsc" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemySprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=32]
tracks/0/type = "value"
tracks/0/path = NodePath("EnemySprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "hl" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemySprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "ebasic"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "edmg"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "edrw"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "edsc"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "ehl"

[sub_resource type="AnimationNodeStateMachineTransition" id=38]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=39]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=40]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=41]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=42]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=43]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=44]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=45]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=46]
states/ebasic/node = SubResource( 33 )
states/ebasic/position = Vector2( 483, 169 )
states/edmg/node = SubResource( 34 )
states/edmg/position = Vector2( 226, 169 )
states/edrw/node = SubResource( 35 )
states/edrw/position = Vector2( 496, 310 )
states/edsc/node = SubResource( 36 )
states/edsc/position = Vector2( 496, 35 )
states/ehl/node = SubResource( 37 )
states/ehl/position = Vector2( 769, 169 )
transitions = [ "ebasic", "ehl", SubResource( 38 ), "ehl", "ebasic", SubResource( 39 ), "edrw", "ebasic", SubResource( 40 ), "ebasic", "edrw", SubResource( 41 ), "edsc", "ebasic", SubResource( 42 ), "ebasic", "edsc", SubResource( 43 ), "ebasic", "edmg", SubResource( 44 ), "edmg", "ebasic", SubResource( 45 ) ]
start_node = "ebasic"

[sub_resource type="AnimationNodeStateMachinePlayback" id=47]

[node name="ForestBattleStage" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 516, 384 )
scale = Vector2( 0.80625, 1.17073 )
texture = ExtResource( 4 )

[node name="HUD" parent="." instance=ExtResource( 1 )]

[node name="EnemyTurnTimer" type="Timer" parent="."]
wait_time = 3.5

[node name="UI black panel2" type="Sprite" parent="."]
position = Vector2( 900, 17.0706 )
scale = Vector2( 0.212693, -0.134499 )
texture = ExtResource( 6 )

[node name="UI black panel3" type="Sprite" parent="."]
position = Vector2( 152.799, 643.929 )
scale = Vector2( 0.204461, -0.152517 )
texture = ExtResource( 6 )

[node name="UI black panel4" type="Sprite" parent="." groups=[
"won",
]]
visible = false
position = Vector2( 400, 328 )
rotation = 3.14159
scale = Vector2( 0.65854, 1.10255 )
texture = ExtResource( 6 )

[node name="GameWon" type="Label" parent="." groups=[
"won",
]]
visible = false
margin_left = 48.0
margin_top = 288.0
margin_right = 752.0
margin_bottom = 417.0
custom_fonts/font = SubResource( 1 )
text = "You have defeated the Dragon Guardian. You may select two upgrades before the next battle."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Congrats" type="Label" parent="." groups=[
"won",
]]
visible = false
margin_left = 56.0
margin_top = 232.0
margin_right = 744.0
margin_bottom = 272.0
custom_fonts/font = SubResource( 1 )
text = "CONGRATULATIONS!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="." groups=[
"won",
]]
visible = false
margin_left = 240.0
margin_top = 464.0
margin_right = 568.0
margin_bottom = 512.0
custom_fonts/font = SubResource( 6 )
disabled = true
text = "CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI black panel5" type="Sprite" parent="." groups=[
"lost",
]]
visible = false
position = Vector2( 400, 328 )
rotation = 3.14159
scale = Vector2( 0.65854, 1.10255 )
texture = ExtResource( 6 )

[node name="Congrats2" type="Label" parent="." groups=[
"lost",
]]
visible = false
margin_left = 56.0
margin_top = 288.0
margin_right = 744.0
margin_bottom = 368.0
custom_fonts/font = SubResource( 7 )
text = "GAME OVER"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RESTART" type="Button" parent="." groups=[
"lost",
]]
visible = false
margin_left = 240.0
margin_top = 464.0
margin_right = 568.0
margin_bottom = 512.0
custom_fonts/font = SubResource( 6 )
disabled = true
text = "RESTART"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WonGameTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="LostGameTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="PLayerSprite" type="AnimatedSprite" parent="."]
position = Vector2( 512, 704 )
scale = Vector2( 0.34, 0.32 )
frames = SubResource( 4 )
animation = "basic"

[node name="EnemySprite" type="AnimatedSprite" parent="."]
position = Vector2( 584, 80 )
scale = Vector2( 0.6925, 0.47 )
frames = SubResource( 5 )
animation = "basic"

[node name="PlayerAnimationPlayer" type="AnimationPlayer" parent="."]
anims/pbasic = SubResource( 8 )
anims/pdmg = SubResource( 9 )
anims/pdrw = SubResource( 10 )
anims/pdsc = SubResource( 11 )
anims/phl = SubResource( 12 )

[node name="PlayerAnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 26 )
anim_player = NodePath("../PlayerAnimationPlayer")
active = true
parameters/playback = SubResource( 27 )

[node name="EnemyAnimationPlayer" type="AnimationPlayer" parent="."]
anims/ebasic = SubResource( 28 )
anims/edmg = SubResource( 29 )
anims/edrw = SubResource( 30 )
anims/edsc = SubResource( 31 )
anims/ehl = SubResource( 32 )

[node name="EnemyAnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 46 )
anim_player = NodePath("../EnemyAnimationPlayer")
active = true
parameters/playback = SubResource( 47 )

[node name="FightBgm" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 31 )
volume_db = -5.85

[node name="WinBgm" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 30 )

[node name="LoseBgm" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 32 )
[connection signal="timeout" from="EnemyTurnTimer" to="." method="_on_EnemyTurnTimer_timeout"]
[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="RESTART" to="." method="_on_RESTART_pressed"]
